# gmuly

./: CHANGELOG.md  Cargo.toml  PARTIALSUM_USAGE.md  README.md  REFACTORING_NOTES.md  SUMCHECK.md
examples/: matrix_operations.rs  mle_demo.rs  mle_sparse_conversion.rs  sumcheck_demo.rs
src/: ccs.rs  lib.rs  mle.rs  sparse_matrix.rs  utils.rs
src/gmuly_protocol/: lccs.rs  mod.rs  prover.rs  verifier.rs
